src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__literal_bin_number_with_double_underscores.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordSemicolon but found '__001_101_01'
  ┌─ <internal>:1:17
  │
1 │ PROGRAM exp 2#01__001_101_01; END_PROGRAM
  │                 ^^^^^^^^^^^^ Unexpected token: expected KeywordSemicolon but found '__001_101_01'
